cleaned heroes data and saved them

--- a/notebooks/clean_cb_data.ipynb
+++ b/notebooks/clean_cb_data.ipynb
@@ -1560,12 +1560,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9a4b3d58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('community_builders.csv', index=False)"
+    "df.to_csv('../data/community_builders_cleaned.csv', index=False)"
    ]
   },
   {
@@ -1579,7 +1579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "aws-cb-dashboard",
    "language": "python",
    "name": "python3"
   },
