cleaned dataset further

--- a/notebooks/clean_heroes_data.ipynb
+++ b/notebooks/clean_heroes_data.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import json"
+    "import json\n",
+    "import ast"
    ]
   },
   {
@@ -533,7 +534,8 @@
     "        \"Korea\": \"South Korea\",\n",
     "        \"Brussels. Belgium\": \"Belgium\",\n",
     "        \"Ontario Canada\": \"Canada\",\n",
-    "        \"MA\": \"United States\"\n",
+    "        \"MA\": \"United States\",\n",
+    "        \"Bosnia and Herzegovina\": \"Bosnia & Herzegovina\"\n",
     "    }\n",
     "df['heroCountry'] = df['heroCountry'].replace(renamed_countries)"
    ]
@@ -767,7 +769,7 @@
        "      <td>since</td>\n",
        "      <td>2025</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -786,7 +788,7 @@
        "      <td>since</td>\n",
        "      <td>2025</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -817,9 +819,9 @@
        "0       Kenya  Europe, Middle East, & Africa      since      2025      NaN   \n",
        "1      Mexico                  North America      since      2025      NaN   \n",
        "\n",
-       "   status  \n",
-       "0  active  \n",
-       "1  active  "
+       "          status  \n",
+       "0  Current Heros  \n",
+       "1  Current Heros  "
       ]
      },
      "execution_count": 10,
@@ -837,7 +839,7 @@
     ")\n",
     "\n",
     "# get status of heroes\n",
-    "df['status'] = df['statement_'].map({'since': 'active', 'from': 'inactive'})\n",
+    "df['status'] = df['statement_'].map({'since': 'Current Heros', 'from': 'Former Heroes'})\n",
     "df.head(2)"
    ]
   },
@@ -892,6 +894,7 @@
        "      <th>heroSince</th>\n",
        "      <th>end_year</th>\n",
        "      <th>status</th>\n",
+       "      <th>heroSuperpower</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -912,7 +915,8 @@
        "      <td>since</td>\n",
        "      <td>2025</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Open Source Contributor, Meetup Organizer, Blo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -931,7 +935,8 @@
        "      <td>since</td>\n",
        "      <td>2025</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Trainer / Educator, Meetup Organizer, Conferen...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -962,9 +967,9 @@
        "0       Kenya  Europe, Middle East, & Africa      since      2025      NaN   \n",
        "1      Mexico                  North America      since      2025      NaN   \n",
        "\n",
-       "   status  \n",
-       "0  active  \n",
-       "1  active  "
+       "          status                                     heroSuperpower  \n",
+       "0  Current Heros  Open Source Contributor, Meetup Organizer, Blo...  \n",
+       "1  Current Heros  Trainer / Educator, Meetup Organizer, Conferen...  "
       ]
      },
      "execution_count": 11,
@@ -974,7 +979,7 @@
    ],
    "source": [
     "# explode superpowers \n",
-    "# df['heroSuperpower'] = df['superpower'].str.replace(r\"[\\[\\]']\", \"\", regex=True)\n",
+    "df['heroSuperpower'] = df['superpower'].str.replace(r\"[\\[\\]']\", \"\", regex=True)\n",
     "df.head(2)"
    ]
   },
@@ -987,7 +992,7 @@
     {
      "data": {
       "text/plain": [
-       "(853, 16)"
+       "(853, 17)"
       ]
      },
      "execution_count": 12,
@@ -996,7 +1001,6 @@
     }
    ],
    "source": [
-    "import ast\n",
     "# Convert string representation of lists in 'superpower' to actual lists\n",
     "df['superpower'] = df['superpower'].apply(\n",
     "    lambda x: ast.literal_eval(x) if isinstance(x, str) else x\n",
@@ -1083,6 +1087,7 @@
        "      <th>heroSince</th>\n",
        "      <th>end_year</th>\n",
        "      <th>status</th>\n",
+       "      <th>heroSuperpower</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1103,7 +1108,8 @@
        "      <td>since</td>\n",
        "      <td>2024</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Blogger, Technical Author, Trainer / Educator,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1122,8 +1128,11 @@
        "           region                  superpower            category heroCountry  \\\n",
        "712  Asia Pacific  hero-alumni - {DO NOT USE}  AWS Community Hero       China   \n",
        "\n",
-       "       heroRegion statement_ heroSince end_year  status  \n",
-       "712  Asia Pacific      since      2024      NaN  active  "
+       "       heroRegion statement_ heroSince end_year         status  \\\n",
+       "712  Asia Pacific      since      2024      NaN  Current Heros   \n",
+       "\n",
+       "                                        heroSuperpower  \n",
+       "712  Blogger, Technical Author, Trainer / Educator,...  "
       ]
      },
      "execution_count": 14,
@@ -1270,8 +1279,8 @@
      "data": {
       "text/plain": [
        "status\n",
-       "active      835\n",
-       "inactive     18\n",
+       "Current Heros    835\n",
+       "Former Heroes     18\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -1296,10 +1305,10 @@
      "data": {
       "text/plain": [
        "heroRegion\n",
-       "Europe, Middle East, & Africa    354\n",
+       "Europe, Middle East, & Africa    362\n",
        "Asia Pacific                     283\n",
        "North America                    162\n",
-       "Latin America                     42\n",
+       "Latin America                     44\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -1365,7 +1374,7 @@
    "outputs": [],
    "source": [
     "# drop unnecessary columns\n",
-    "cols_drop_ = ['heroSinceDate', 'region', 'heroCategory', 'statement_', 'end_year']\n",
+    "cols_drop_ = ['region', 'heroCategory', 'statement_', 'end_year']\n",
     "df = df.drop(columns=cols_drop_)"
    ]
   },
@@ -1399,6 +1408,7 @@
        "      <th>id</th>\n",
        "      <th>heroName</th>\n",
        "      <th>heroLocation</th>\n",
+       "      <th>heroSinceDate</th>\n",
        "      <th>heroImageURL</th>\n",
        "      <th>featureFlag</th>\n",
        "      <th>superpower</th>\n",
@@ -1407,6 +1417,7 @@
        "      <th>heroRegion</th>\n",
        "      <th>heroSince</th>\n",
        "      <th>status</th>\n",
+       "      <th>heroSuperpower</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1415,6 +1426,7 @@
        "      <td>community-heroes#adeline-makokha</td>\n",
        "      <td>Adeline Makokha</td>\n",
        "      <td>Nairobi, Kenya</td>\n",
+       "      <td>Hero since 2025</td>\n",
        "      <td>https://d1.awsstatic.com/developer-center/adel...</td>\n",
        "      <td>NEW</td>\n",
        "      <td>Open Source Contributor</td>\n",
@@ -1422,13 +1434,15 @@
        "      <td>Kenya</td>\n",
        "      <td>Europe, Middle East, &amp; Africa</td>\n",
        "      <td>2025</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Open Source Contributor, Meetup Organizer, Blo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>community-heroes#adeline-makokha</td>\n",
        "      <td>Adeline Makokha</td>\n",
        "      <td>Nairobi, Kenya</td>\n",
+       "      <td>Hero since 2025</td>\n",
        "      <td>https://d1.awsstatic.com/developer-center/adel...</td>\n",
        "      <td>NEW</td>\n",
        "      <td>Meetup Organizer</td>\n",
@@ -1436,13 +1450,15 @@
        "      <td>Kenya</td>\n",
        "      <td>Europe, Middle East, &amp; Africa</td>\n",
        "      <td>2025</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Open Source Contributor, Meetup Organizer, Blo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>community-heroes#adeline-makokha</td>\n",
        "      <td>Adeline Makokha</td>\n",
        "      <td>Nairobi, Kenya</td>\n",
+       "      <td>Hero since 2025</td>\n",
        "      <td>https://d1.awsstatic.com/developer-center/adel...</td>\n",
        "      <td>NEW</td>\n",
        "      <td>Blogger</td>\n",
@@ -1450,13 +1466,15 @@
        "      <td>Kenya</td>\n",
        "      <td>Europe, Middle East, &amp; Africa</td>\n",
        "      <td>2025</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Open Source Contributor, Meetup Organizer, Blo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>community-heroes#adeline-makokha</td>\n",
        "      <td>Adeline Makokha</td>\n",
        "      <td>Nairobi, Kenya</td>\n",
+       "      <td>Hero since 2025</td>\n",
        "      <td>https://d1.awsstatic.com/developer-center/adel...</td>\n",
        "      <td>NEW</td>\n",
        "      <td>Conference Speaker</td>\n",
@@ -1464,13 +1482,15 @@
        "      <td>Kenya</td>\n",
        "      <td>Europe, Middle East, &amp; Africa</td>\n",
        "      <td>2025</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Open Source Contributor, Meetup Organizer, Blo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>community-heroes#david-victoria</td>\n",
        "      <td>David Victoria</td>\n",
        "      <td>Monterrey, Mexico</td>\n",
+       "      <td>Hero since 2025</td>\n",
        "      <td>https://d1.awsstatic.com/developer-center/davi...</td>\n",
        "      <td>New</td>\n",
        "      <td>Trainer / Educator</td>\n",
@@ -1478,7 +1498,8 @@
        "      <td>Mexico</td>\n",
        "      <td>North America</td>\n",
        "      <td>2025</td>\n",
-       "      <td>active</td>\n",
+       "      <td>Current Heros</td>\n",
+       "      <td>Trainer / Educator, Meetup Organizer, Conferen...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1492,26 +1513,33 @@
        "3  community-heroes#adeline-makokha  Adeline Makokha     Nairobi, Kenya   \n",
        "4   community-heroes#david-victoria   David Victoria  Monterrey, Mexico   \n",
        "\n",
-       "                                        heroImageURL featureFlag  \\\n",
-       "0  https://d1.awsstatic.com/developer-center/adel...         NEW   \n",
-       "1  https://d1.awsstatic.com/developer-center/adel...         NEW   \n",
-       "2  https://d1.awsstatic.com/developer-center/adel...         NEW   \n",
-       "3  https://d1.awsstatic.com/developer-center/adel...         NEW   \n",
-       "4  https://d1.awsstatic.com/developer-center/davi...         New   \n",
+       "     heroSinceDate                                       heroImageURL  \\\n",
+       "0  Hero since 2025  https://d1.awsstatic.com/developer-center/adel...   \n",
+       "1  Hero since 2025  https://d1.awsstatic.com/developer-center/adel...   \n",
+       "2  Hero since 2025  https://d1.awsstatic.com/developer-center/adel...   \n",
+       "3  Hero since 2025  https://d1.awsstatic.com/developer-center/adel...   \n",
+       "4  Hero since 2025  https://d1.awsstatic.com/developer-center/davi...   \n",
        "\n",
-       "                superpower            category heroCountry  \\\n",
-       "0  Open Source Contributor  AWS Community Hero       Kenya   \n",
-       "1         Meetup Organizer  AWS Community Hero       Kenya   \n",
-       "2                  Blogger  AWS Community Hero       Kenya   \n",
-       "3       Conference Speaker  AWS Community Hero       Kenya   \n",
-       "4       Trainer / Educator  AWS Community Hero      Mexico   \n",
+       "  featureFlag               superpower            category heroCountry  \\\n",
+       "0         NEW  Open Source Contributor  AWS Community Hero       Kenya   \n",
+       "1         NEW         Meetup Organizer  AWS Community Hero       Kenya   \n",
+       "2         NEW                  Blogger  AWS Community Hero       Kenya   \n",
+       "3         NEW       Conference Speaker  AWS Community Hero       Kenya   \n",
+       "4         New       Trainer / Educator  AWS Community Hero      Mexico   \n",
        "\n",
-       "                      heroRegion heroSince  status  \n",
-       "0  Europe, Middle East, & Africa      2025  active  \n",
-       "1  Europe, Middle East, & Africa      2025  active  \n",
-       "2  Europe, Middle East, & Africa      2025  active  \n",
-       "3  Europe, Middle East, & Africa      2025  active  \n",
-       "4                  North America      2025  active  "
+       "                      heroRegion heroSince         status  \\\n",
+       "0  Europe, Middle East, & Africa      2025  Current Heros   \n",
+       "1  Europe, Middle East, & Africa      2025  Current Heros   \n",
+       "2  Europe, Middle East, & Africa      2025  Current Heros   \n",
+       "3  Europe, Middle East, & Africa      2025  Current Heros   \n",
+       "4                  North America      2025  Current Heros   \n",
+       "\n",
+       "                                      heroSuperpower  \n",
+       "0  Open Source Contributor, Meetup Organizer, Blo...  \n",
+       "1  Open Source Contributor, Meetup Organizer, Blo...  \n",
+       "2  Open Source Contributor, Meetup Organizer, Blo...  \n",
+       "3  Open Source Contributor, Meetup Organizer, Blo...  \n",
+       "4  Trainer / Educator, Meetup Organizer, Conferen...  "
       ]
      },
      "execution_count": 23,
